--- a/Assignment 3/DNN- cifar10.ipynb
+++ b/Assignment 3/DNN- cifar10.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Assignment 3--80/82.ipynb",
+      "name": "Copy of Assignment 3--80/82.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -631,31 +631,27 @@
       "source": [
         "\n",
         "model = Sequential()\n",
-        "model.add(SeparableConv2D(32, kernel_size=(3, 3), activation='relu', strides=(1,1), input_shape=(32,32,3))) \n",
-        "model.add(Convolution2D(32, 1, 1))\n",
-        "# model.add(GlobalAveragePooling2D())\n",
+        "model.add(SeparableConv2D(32, kernel_size=(3, 3), activation='relu', strides=(1,1), input_shape=(32,32,3))) # o/p: 30 ,r:3\n",
+        "model.add(Convolution2D(32, 1, 1))  # o/p: 30 ,r:3\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(64, kernel_size=(3, 3), activation='relu',strides=(2,2))) # \n",
-        "model.add(Convolution2D(64, 1, 1))\n",
-        "# model.add(GlobalAveragePooling2D())\n",
+        "model.add(SeparableConv2D(64, kernel_size=(3, 3), activation='relu',strides=(2,2))) # o/p: 14 ,r:5\n",
+        "model.add(Convolution2D(64, 1, 1))  # o/p: 14 ,r:5\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(128, kernel_size=(3, 3), activation='relu',strides=(1,1))) \n",
-        "model.add(Convolution2D(128, 1, 1))\n",
-        "# model.add(GlobalAveragePooling2D())\n",
+        "model.add(SeparableConv2D(128, kernel_size=(3, 3), activation='relu',strides=(1,1))) # o/p: 12 ,r:9\n",
+        "model.add(Convolution2D(128, 1, 1)) # o/p: 12 ,r:9\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(256, kernel_size=(3, 3), activation='relu',strides=(2,2))) # \n",
+        "model.add(SeparableConv2D(256, kernel_size=(3, 3), activation='relu',strides=(2,2))) # o/p: 5 ,r:13 \n",
         "\n",
         "model.add(BatchNormalization())\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(10, kernel_size=(5, 5), activation='relu',strides=(1,1))) # \n",
-        "# model.add(GlobalAveragePooling2D())\n",
+        "model.add(SeparableConv2D(10, kernel_size=(5, 5), activation='relu',strides=(1,1))) # o/p: 1 , r:29  \n",
         "model.add(Flatten())\n",
         "model.add(Activation('softmax'))\n",
         "\n"
