--- a/Assignment 3/DNN cifar10.ipynb
+++ b/Assignment 3/DNN cifar10.ipynb
@@ -611,11 +611,10 @@
       "source": [
         "\n",
         "model = Sequential()\n",
-        "model.add(SeparableConv2D(32, kernel_size=(3, 3), strides=(1,1), input_shape=(32,32,3))) # o/p: 30 ,r:3\n",
         "\n",
+        "model.add(SeparableConv2D(32, kernel_size=(3, 3), strides=(1,1), input_shape=(32,32,3))) # o/p: 30 ,r:3\n",
         "model.add(BatchNormalization())\n",
         "model.add(Activation('relu'))\n",
-        "\n",
         "model.add(Dropout(0.15))\n",
         "\n",
         "model.add(SeparableConv2D(64, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 28 ,r:5\n",
@@ -623,26 +622,26 @@
         "model.add(Activation('relu'))\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(128, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 28 ,r:5\n",
+        "model.add(SeparableConv2D(128, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 26 ,r:7\n",
         "model.add(BatchNormalization())\n",
         "model.add(Activation('relu'))\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(256, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 28 ,r:5\n",
+        "model.add(SeparableConv2D(256, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 24 ,r:9\n",
         "model.add(BatchNormalization())\n",
         "model.add(Activation('relu'))\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(MaxPooling2D(pool_size=(2,2))) # o/p: 12 r:\n",
+        "model.add(MaxPooling2D(pool_size=(2,2))) # o/p: 12 r:10\n",
         "\n",
-        "model.add(SeparableConv2D(128, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 28 ,r:5\n",
+        "model.add(SeparableConv2D(128, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 10 ,r:14\n",
         "model.add(BatchNormalization())\n",
         "model.add(Activation('relu'))\n",
         "model.add(Dropout(0.15))\n",
         "\n",
-        "model.add(SeparableConv2D(10, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 24 ,r:9\n",
+        "model.add(SeparableConv2D(10, kernel_size=(3, 3), strides=(1,1),kernel_regularizer=regularizers.l2(0.000001)))  # o/p: 8 ,r:18\n",
         "model.add(GlobalAveragePooling2D())\n",
-        "# model.add(Flatten())\n",
+        "\n",
         "model.add(Activation('softmax'))\n",
         "\n"
       ],
