--- a/Assignment 4/assignment_4B.ipynb
+++ b/Assignment 4/assignment_4B.ipynb
@@ -225,26 +225,27 @@
         "def resnet_v2(input_shape, depth, num_classes=10):\n",
         "    \"\"\"\n",
         "\n",
-        "    For the input: conv2d(16,3x3)->BN-> RELU-1\n",
+        "RESNET56v2\n",
+        "For the input: conv2d(16,3x3)->BN-> RELU-1\n",
         "\n",
-        "    Stage 1:\n",
-        "        res_block = 1\n",
-        "            y: [RELU-1  -> conv2d(16,1x1) ] -> [ BN-> relu-> conv2d(16,3x3) ] -> [BN-> relu-> CONV2D(64,1x1)-1]\n",
-        "            x: RELU-1 -> CONV2D(64,1x1)-2\n",
-        "          x = x+y ( CONV2D(64,1x1)-1  (+)  CONV2D(64,1x1)-2  )\n",
+        "Stage 1:\n",
+        "  res_block = 1\n",
+        "      y: [RELU-1  -> conv2d(16,1x1) ] -> [ BN-> relu-> conv2d(16,3x3) ] -> [BN-> relu-> CONV2D(64,1x1)-1]\n",
+        "        x: RELU-1 -> CONV2D(64,1x1)-2\n",
+        "      x = x+y ( CONV2D(64,1x1)-1  (+)  CONV2D(64,1x1)-2  )\n",
         "\n",
-        "        res_block = 2 to 6\n",
-        "            y: [BN-> relu-> conv2d(16,1x1) ] -> [ BN-> relu-> conv2d(16,3x3) ] -> [BN-> relu-> CONV2D(64,1x1)-1]\n",
+        "    res_block = 2 to 6\n",
+        "        y: [BN-> relu-> conv2d(16,1x1) ] -> [ BN-> relu-> conv2d(16,3x3) ] -> [BN-> relu-> CONV2D(64,1x1)-1]\n",
         "            x = x+y\n",
-        "    Stage 2 to 3:\n",
-        "        res_block = 1\n",
-        "            y: [RELU-1  -> conv2d(64,1x1, s=2 ) ] -> [ BN-> relu-> conv2d(64,3x3) ] -> [BN-> relu-> CONV2D(128,1x1)-1]\n",
-        "            x: RELU-1 -> CONV2D(64,1x1, s=2 )-2\n",
-        "          x = x+y ( CONV2D(64,1x1)-1  (+)  CONV2D(64,1x1,s=2)-2  )\n",
+        "Stage 2 to 3:\n",
+        "  res_block = 1\n",
+        "     y: [RELU-1  -> conv2d(64,1x1, s=2 ) ] -> [ BN-> relu-> conv2d(64,3x3) ] -> [BN-> relu-> CONV2D(128,1x1)-1]\n",
+        "     x: RELU-1 -> CONV2D(64,1x1, s=2 )-2\n",
+        "     x = x+y ( CONV2D(64,1x1)-1  (+)  CONV2D(64,1x1,s=2)-2  )\n",
         "\n",
-        "        res_block = 2 to 6\n",
-        "            y: [BN-> relu-> conv2d(64,1x1) ] -> [ BN-> relu-> conv2d(64,3x3) ] -> [BN-> relu-> CONV2D(128,1x1)-1]\n",
-        "            x = x+y \n",
+        "  res_block = 2 to 6\n",
+        "     y: [BN-> relu-> conv2d(64,1x1) ] -> [ BN-> relu-> conv2d(64,3x3) ] -> [BN-> relu-> CONV2D(128,1x1)-1]\n",
+        "     x = x+y \n",
         "      \n",
         "\n",
         "    \"\"\"\n",
