--- a/Assignment 4/assignment_4B.ipynb
+++ b/Assignment 4/assignment_4B.ipynb
@@ -1234,6 +1234,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3u4sehmA-ziu",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Grad Cam"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bIwRMVRVJgsL",
@@ -1305,6 +1315,7 @@
         "  fig, ax = plt.subplots(figsize=(2,2),nrows=1, ncols=2)\n",
         "  ax[0].imshow(input_image1,aspect='auto')\n",
         "  ax[1].imshow(superimposed_img,aspect='auto')\n",
+        "\n",
         "  plt.show()\n",
         "\n",
         "\n",
